# agent-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
orchestrator/: agents.py  main.py  models.py  policies.py  reporting.py  tools_fs.py  tools_shell.py  utils.py
orchestrator/prompts/: implementer.md  planner.md  reviewer.md  tech_writer.md
project/tasks/: backlog.md  current.md  done.md
workspace/: README.md
workspace/app/: greeter.py
workspace/tests/: test_greeter.py
