[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-orchestrator"
version = "0.1.0"
description = "OpenAI Agents SDK-based agent orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai-agents>=0.0.6",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]
exclude = ["project*", "workspace*"]

[tool.setuptools.package-data]
orchestrator = ["prompts/*.md"]
